FIX: prevent header text clipping on small screens

--- a/static/global.css
+++ b/static/global.css
@@ -68,6 +68,11 @@ body > header > h1 {
     font-size: 4em;
     text-transform: uppercase;
     margin: 0;
+    line-height: 1em;
+}
+
+body > header > p {
+    margin-top: 0;
 }
 
 .next-section {
